# forma

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json  wrangler.jsonc
apps/api/migrations/: 0001_init.sql
apps/api/src/: env.ts  index.ts  validation.ts
apps/api/src/llm/: anthropic.ts  generate.ts  router.ts
apps/api/src/middleware/: guards.ts
apps/api/src/retrieval/: config.ts  embeddings.ts  fusion.ts  search.ts  vectorstore.ts
apps/api/src/routes/: admin.ts  chat.ts  documents.ts  search.ts
apps/api/test/: fusion.test.ts  mock-embeddings.test.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AccessGate.tsx  ChatPanel.tsx  FieldInput.tsx  FormPanel.tsx  FormPicker.tsx  MessageBody.tsx  PdfViewer.tsx  TopBar.tsx
apps/web/src/lib/: api.ts  form.ts  sse.ts  storage.ts
data/: manifest.json
docs/: ARCHITECTURE.md  DEMO.md
evals/golden/: licensing_golden.jsonl
evals/results/: 20260709-103655-stage1.json  20260709-104240-stage2.json  20260709-104731-generation.json  20260709-141507-stage1-7docs.json  20260709-141812-generation-7docs.json  README.md
ingestion/: pyproject.toml
ingestion/src/forma_evals/: cli.py  dataset.py  judge.py  metrics.py  runner.py
ingestion/src/forma_ingest/: cli.py  llm.py  models.py  pipeline.py  uploader.py
scripts/: deploy.mjs  evaluate.py  fetch-corpus.sh  ingest.py  setup.mjs
