[project]
name = "forma-ingestion"
version = "0.1.0"
description = "Forma offline ingestion: Docling parsing, chunking, form-schema generation, upload"
# Docling/PyTorch do not support 3.14 yet; uv provisions 3.12 automatically.
requires-python = ">=3.11,<3.13"
dependencies = [
    "docling>=2.36.0",
    "anthropic>=0.62.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
evals = [
    "deepeval>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forma_ingest"]

[tool.uv]
python-preference = "managed"
